fix: overflow issue

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -125,10 +125,12 @@ layer(base);
 @layer base {
   html {
     scroll-behavior: smooth;
+    overflow-x: clip;
   }
 
   body {
     font-family: "Inter", sans-serif;
+    overflow-x: clip;
   }
 
   section[id] {
